@@ -2985,8 +2985,7 @@ Tcl_CreateMathFunc(
 
     data->proc = proc;
     data->numArgs = numArgs;
-    data->argTypes = (Tcl_ValueType*)
-	    Tcl_Alloc(numArgs * sizeof(Tcl_ValueType));
+    data->argTypes = (Tcl_ValueType*) ckalloc(numArgs * sizeof(Tcl_ValueType));
     memcpy(data->argTypes, argTypes, numArgs * sizeof(Tcl_ValueType));
     data->clientData = clientData;
 
