@@ -646,7 +646,7 @@ SetTZIfNecessary(void)
 	} else {
 	    Tcl_Free(lastTZ);
 	}
-	lastTZ = Tcl_Alloc(strlen(newTZ) + 1);
+	lastTZ = ckalloc(strlen(newTZ) + 1);
 	strcpy(lastTZ, newTZ);
     }
     Tcl_MutexUnlock(&tmMutex);
@@ -673,7 +673,7 @@ static void
 CleanupMemory(
     ClientData ignored)
 {
-    Tcl_Free(lastTZ);
+    ckfree(lastTZ);
 }
 
 /*
